src/styles.css
@font-face {
    font-family: 'distant_galaxy';
    src: url('./fonts/DISTGRG_-webfont.woff') format('woff');         
    font-weight: normal;
    font-style: normal;
}

* {
    box-sizing: border-box;
    margin: 0;
    font-family: 'distant_galaxy';
}

a:link, a:visited {
    color: white;
    text-decoration: none;
}

.nav-btn:link, .nav-btn:visited {
    color: #000;
    text-decoration: none;
}

body {
    height: 100vh;
    display: grid;
    grid-template-rows: 72px 10fr;
}

.background-div {
    background-image: url(./images/wallpaper.jpg);
    background-size: cover;
    height: calc(100vh - 72px);
    width: 100vw;
}

.header {
    background-color: #000;
    color: white;
    font-size: 1.3rem;
    display: grid;
    grid-template-columns: 60% 40%;
}

.title {
    font-size: 1.8rem;
    align-self: center;
    padding-left: 20px;
}

.pages {
    display: flex;
    justify-content: space-around;
    align-items: center;
    gap: 10px;
}

.main {
    background-color: #EEEEEE;
}

.card-organizer {
    display: grid;
    place-items: center;
    gap: 20px;
    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
    padding: 5px;
}

.content-title {
    text-align: center;
    padding: 20px;
    font-size: 2.6rem;
}

.card {
    height: 270px;
    width: 320px;
    border: 3px solid #1F2738;
    display: flex;
    align-items: center;
    flex-direction: column;
}

.element-name {
    width: 316px;
    height: 50px;
    line-height: 50px;
    font-size: 1.2rem;
    background-color: #1F2738;
    color: white;
    text-align: center;
    overflow: hidden;
}

.element-name:hover, .card:hover {
    background-color: #F56F36;
    border: 3px solid #F56F36;
}

.placeholder {
    height: 100%;
    width: 100%;
    overflow: hidden;
}

.loading {
    font-size: 4.0rem;
    text-align: center;
    padding: 100px;
}

.home {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 20px; 
}

.nav-btn {
    height: 40px;
    line-height: 40px;
    width: 250px;
    background-color: #EEEEEE;
    border-radius: 15px;
    border: 2px solid #000;
    font-size: 1.5rem;
    text-align: center;
}

[data-tab-target] {
    cursor: pointer;
}

[data-tab-content] {
    display: none;
}

.active[data-tab-content] {
    display: block;
}

